Use new ToolbarView widget for history panel

--- a/data/ui/history.ui
+++ b/data/ui/history.ui
@@ -5,82 +5,78 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
-<!-- History box for sidebar -->
+<!-- History panel for sidebar -->
 <interface>
-  <template class="HistoryBox" parent="GtkBox">
-    <property name="orientation">vertical</property>
-
-    <!-- Header -->
+  <template class="HistoryPanel" parent="AdwBin">
     <child>
-      <object class="GtkBox">
-        <property name="margin-start">6</property>
-        <property name="margin-end">6</property>
-        <property name="margin-top">6</property>
-        <property name="margin-bottom">6</property>
-        <property name="spacing">6</property>
-        <property name="hexpand">false</property>
+      <object class="AdwToolbarView">
 
-        <!-- Filter selector by days -->
-        <child>
-          <object class="GtkDropDown" id="filter_dropdown">
-            <property name="hexpand">true</property>
-          </object>
-        </child>
+        <!-- Header -->
+        <child type="top">
+          <object class="GtkBox">
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>
+            <property name="margin-top">6</property>
+            <property name="margin-bottom">6</property>
+            <property name="spacing">6</property>
+            <property name="hexpand">false</property>
 
-        <!-- Clear history button -->
-        <child>
-          <object class="GtkButton" id="clear_button">
-            <property name="icon-name">list-remove-all-symbolic</property>
-            <property name="tooltip-text" translatable="yes">Clear History</property>
-          </object>
-        </child>
-
-      </object>
-    </child>
-
-    <!-- Separator -->
-    <child>
-      <object class="GtkSeparator" id="history_separator">
-        <property name="visible">false</property>
-      </object>
-    </child>
-
-    <!-- History scroller -->
-    <child>
-      <object class="GtkScrolledWindow" id="history_scroller">
-        <child>
-          <object class="GtkViewport">
-
-            <!-- History list -->
+            <!-- Filter selector by days -->
             <child>
-              <object class="GtkListBox" id="history_list">
-                <property name="vexpand">true</property>
-                <property name="selection-mode">none</property>
-                <style>
-                  <class name="navigation-sidebar"/>
-                </style>
+              <object class="GtkDropDown" id="filter_dropdown">
+                <property name="hexpand">true</property>
+              </object>
+            </child>
 
-                <!-- Placeholder -->
-                <child type="placeholder">
-                  <object class="AdwStatusPage">
-                    <property name="title" translatable="yes">Empty History</property>
-                    <property name="description" translatable="yes">There are no recent articles in the history</property>
-                    <property name="icon-name">document-open-recent-symbolic</property>
-                    <property name="margin-start">50</property>
-                    <property name="margin-end">50</property>
-                    <style>
-                      <class name="compact"/>
-                    </style>
-                  </object>
-                </child>
-
+            <!-- Clear history button -->
+            <child>
+              <object class="GtkButton" id="clear_button">
+                <property name="icon-name">list-remove-all-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Clear History</property>
               </object>
             </child>
 
           </object>
         </child>
+
+        <!-- History scroller -->
+        <property name="content">
+          <object class="GtkScrolledWindow">
+            <child>
+              <object class="GtkViewport">
+
+                <!-- History list -->
+                <child>
+                  <object class="GtkListBox" id="history_list">
+                    <property name="vexpand">true</property>
+                    <property name="selection-mode">none</property>
+                    <style>
+                      <class name="navigation-sidebar"/>
+                    </style>
+
+                    <!-- Placeholder -->
+                    <child type="placeholder">
+                      <object class="AdwStatusPage">
+                        <property name="title" translatable="yes">Empty History</property>
+                        <property name="description" translatable="yes">There are no recent articles in the history</property>
+                        <property name="icon-name">document-open-recent-symbolic</property>
+                        <property name="margin-start">50</property>
+                        <property name="margin-end">50</property>
+                        <style>
+                          <class name="compact"/>
+                        </style>
+                      </object>
+                    </child>
+
+                  </object>
+                </child>
+
+              </object>
+            </child>
+          </object>
+        </property>
+
       </object>
     </child>
-
   </template>
 </interface>
