--- a/data/ui/bookmarks.ui
+++ b/data/ui/bookmarks.ui
@@ -5,90 +5,86 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
-<!-- Bookmarks box for sidebar -->
+<!-- Bookmarks panel for sidebar -->
 <interface>
-  <template class="BookmarksBox" parent="GtkBox">
-    <property name="orientation">vertical</property>
-
-    <!-- Header -->
+  <template class="BookmarksPanel" parent="AdwBin">
     <child>
-      <object class="GtkBox">
-        <property name="margin-start">6</property>
-        <property name="margin-end">6</property>
-        <property name="margin-top">6</property>
-        <property name="margin-bottom">6</property>
-        <property name="spacing">6</property>
-        <property name="hexpand">false</property>
+      <object class="AdwToolbarView">
 
-        <!-- Bookmark list selector -->
-        <child>
-          <object class="GtkDropDown" id="booklists_dropdown">
-            <property name="hexpand">true</property>
-          </object>
-        </child>
+        <!-- Header -->
+        <child type="top">
+          <object class="GtkBox">
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>
+            <property name="margin-top">6</property>
+            <property name="margin-bottom">6</property>
+            <property name="spacing">6</property>
+            <property name="hexpand">false</property>
 
-        <!-- Add bookmark button -->
-        <child>
-          <object class="GtkButton" id="add_button">
-            <property name="icon-name">bookmark-new-symbolic</property>
-            <property name="tooltip-text" translatable="yes">Add Bookmark</property>
-            <property name="action-name">win.add-bookmark</property>
-          </object>
-        </child>
-
-        <!-- Menu button -->
-        <child>
-          <object class="GtkMenuButton" id="menu_button">
-            <property name="icon-name">view-more-symbolic</property>
-          </object>
-        </child>
-
-      </object>
-    </child>
-
-    <!-- Separator -->
-    <child>
-      <object class="GtkSeparator" id="bookmarks_separator">
-        <property name="visible">false</property>
-      </object>
-    </child>
-
-    <!-- Bookmarks scroller -->
-    <child>
-      <object class="GtkScrolledWindow" id="bookmarks_scroller">
-        <child>
-          <object class="GtkViewport">
-
-            <!-- Bookmarks list -->
+            <!-- Bookmark list selector -->
             <child>
-              <object class="GtkListBox" id="bookmarks_list">
-                <property name="vexpand">true</property>
-                <property name="selection-mode">none</property>
-                <style>
-                  <class name="navigation-sidebar"/>
-                </style>
+              <object class="GtkDropDown" id="booklists_dropdown">
+                <property name="hexpand">true</property>
+              </object>
+            </child>
 
-                <!-- Placeholder -->
-                <child type="placeholder">
-                  <object class="AdwStatusPage">
-                    <property name="title" translatable="yes">No Bookmarks</property>
-                    <property name="description" translatable="yes">Use the Add Bookmark button or press Ctrl+D to add the current article to the list</property>
-                    <property name="icon-name">user-bookmarks-symbolic</property>
-                    <property name="margin-start">50</property>
-                    <property name="margin-end">50</property>
-                    <style>
-                      <class name="compact"/>
-                    </style>
-                  </object>
-                </child>
+            <!-- Add bookmark button -->
+            <child>
+              <object class="GtkButton" id="add_button">
+                <property name="icon-name">bookmark-new-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Add Bookmark</property>
+                <property name="action-name">win.add-bookmark</property>
+              </object>
+            </child>
 
+            <!-- Menu button -->
+            <child>
+              <object class="GtkMenuButton" id="menu_button">
+                <property name="icon-name">view-more-symbolic</property>
               </object>
             </child>
 
           </object>
         </child>
+
+        <!-- Bookmarks scroller -->
+        <property name="content">
+          <object class="GtkScrolledWindow">
+            <child>
+              <object class="GtkViewport">
+
+                <!-- Bookmarks list -->
+                <child>
+                  <object class="GtkListBox" id="bookmarks_list">
+                    <property name="vexpand">true</property>
+                    <property name="selection-mode">none</property>
+                    <style>
+                      <class name="navigation-sidebar"/>
+                    </style>
+
+                    <!-- Placeholder -->
+                    <child type="placeholder">
+                      <object class="AdwStatusPage">
+                        <property name="title" translatable="yes">No Bookmarks</property>
+                        <property name="description" translatable="yes">Use the Add Bookmark button or press Ctrl+D to add the current article to the list</property>
+                        <property name="icon-name">user-bookmarks-symbolic</property>
+                        <property name="margin-start">50</property>
+                        <property name="margin-end">50</property>
+                        <style>
+                          <class name="compact"/>
+                        </style>
+                      </object>
+                    </child>
+
+                  </object>
+                </child>
+
+              </object>
+            </child>
+          </object>
+        </property>
+
       </object>
     </child>
-
   </template>
 </interface>
