--- a/data/ui/languages-row.ui
+++ b/data/ui/languages-row.ui
@@ -12,8 +12,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <!-- Language row box -->
     <child>
       <object class="GtkBox">
-        <property name="margin_top">3</property>
-        <property name="margin_bottom">3</property>
+        <property name="margin-top">3</property>
+        <property name="margin-bottom">3</property>
 
         <!-- Language name label -->
         <child>
