Main window UI revamp

--- a/data/ui/bookmarks.ui
+++ b/data/ui/bookmarks.ui
@@ -14,12 +14,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
         <!-- Header -->
         <child type="top">
           <object class="GtkBox">
-            <property name="margin-start">6</property>
-            <property name="margin-end">6</property>
-            <property name="margin-top">6</property>
-            <property name="margin-bottom">6</property>
-            <property name="spacing">6</property>
-            <property name="hexpand">false</property>
+            <style>
+              <class name="toolbar"/>
+            </style>
 
             <!-- Bookmark list selector -->
             <child>
