--- a/data/ui/toc.ui
+++ b/data/ui/toc.ui
@@ -16,8 +16,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
           <object class="GtkLabel" id="title_label">
             <property name="margin-start">15</property>
             <property name="margin-end">15</property>
-            <property name="margin-top">12</property>
-            <property name="margin-bottom">9</property>
+            <property name="height-request">46</property>
             <property name="xalign">0</property>
             <property name="width-chars">30</property>
             <property name="max-width-chars">30</property>
