--- a/data/gtk/history-row.ui
+++ b/data/gtk/history-row.ui
@@ -42,7 +42,10 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <child>
                   <object class="GtkLabel" id="time_label">
                     <property name="halign">start</property>
-                    <property name="use-markup">true</property>
+                    <style>
+                      <class name="caption"/>
+                      <class name="dim-label"/>
+                    </style>
                   </object>
                 </child>
 
@@ -50,8 +53,11 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <child>
                   <object class="GtkLabel" id="lang_label">
                     <property name="halign">start</property>
-                    <property name="use-markup">true</property>
                     <property name="ellipsize">end</property>
+                    <style>
+                      <class name="caption"/>
+                      <class name="dim-label"/>
+                    </style>
                   </object>
                 </child>
 
