--- a/data/gtk/langlinks-row.ui
+++ b/data/gtk/langlinks-row.ui
@@ -46,8 +46,11 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <child>
               <object class="GtkLabel" id="title_label">
                 <property name="halign">start</property>
-                <property name="use-markup">True</property>
                 <property name="ellipsize">end</property>
+                <style>
+                  <class name="caption"/>
+                  <class name="dim-label"/>
+                </style>
               </object>
             </child>
 
